<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="10dip" >

    <!-- Email Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/etuname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:singleLine="true" />
    <!-- Password Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/ettuno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:singleLine="true" />
    <!-- Login button -->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/login_text" />
    <!-- Link to Registration Screen -->

    <TextView
        android:id="@+id/link_to_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dip"
        android:layout_marginTop="40dip"
        android:gravity="center"
        android:text="@string/reg_text"
        android:textColor="#0b84aa"
        android:textSize="20dip" />

</LinearLayout><!-- Login Form Ends -->

